# asu_st_np

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
static/css/: fonts.css  styles.css
templates/: base.html  docs.html  index.html  main.html  video.html  video_play.html
utils/: pars_content.py
