[tool.poetry]
name = "asu-st-np"
version = "0.1.0"
description = ""
authors = ["mixalych <mixalych06@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
docx2pdf = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
